fix: align center reduce white space sitehero

--- a/src/pages/sitehome/sitehero/sitehero.scss
+++ b/src/pages/sitehome/sitehero/sitehero.scss
@@ -1,5 +1,5 @@
 .hero-wrap{
-    height: 910px;
+    height: 731px;
     background: url("../../../../public/assets/bv-header-banner.png");
     background-repeat: no-repeat;
     background-size: cover;
